# AuthenticationService

./: .gitignore  CMakeLists.txt  README.md  cli.c  cli.h  client.c  database.c  database.h  main.c  threadsdata.h  utils.c  utils.h
cli/: cli.c  cli.h
cmake-modules/: FindCJSON.cmake  FindOPENSSL.cmake
database/: database.c  database.h  mongodata.h
deploy/: ca-cert.pem  ca-key.pem  mongo.yml  server-cert.pem  server-key.pem  server-req.pem
deploy/database/db/: _mdb_catalog.wt  collection-0-6026902993830920034.wt  collection-0-858832982602956633.wt  collection-2-6026902993830920034.wt  collection-4-6026902993830920034.wt  collection-8-6026902993830920034.wt  index-1-6026902993830920034.wt  index-1-858832982602956633.wt  index-10-6026902993830920034.wt  index-3-6026902993830920034.wt  index-5-6026902993830920034.wt  index-6-6026902993830920034.wt  index-9-6026902993830920034.wt  sizeStorer.wt
deploy/database/db/diagnostic.data/: metrics.2023-12-11T16-00-13Z-00000  metrics.2023-12-12T23-14-35Z-00000  metrics.interim
hmac/: hmac_sha2.c  hmac_sha2.h  test_hmac.c
server/: base64.c  base64.h  handlers_list.c  handlers_list.h  handlers_types.h  header_list.c  header_list.h  jwt.c  jwt.h  query_list.c  query_list.h  request.c  request.h  response.c  response.h  server.c  server.h
server_keys/: clean_old_server_keys.sh  gen_server_keys.sh
sha/: sha.c  sha.h  test_sha2.c
utils/: utils.h
